--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -13,3 +13,22 @@
   <%= f.text_field :inventory %>
   <%= f.submit "submit" %>
 <% end %>
+
+<script type="text/javascript" charset="utf-8">
+  $(function () {
+    $('form').submit(function(event) {
+      //prevent form from submitting the default way
+      event.preventDefault();
+
+      var values = $(this).serialize();
+
+      var posting = $.post('/products', values);
+
+      posting.done(function(data) {
+        var post = data;
+        $("#productName").text(post["name"]);
+        $("#productPrice").text(post["price"]);
+      });
+    });
+  });
+</script>
