--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,20 +15,17 @@
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
-  $(function () {
-    $('form').submit(function(event) {
-      //prevent form from submitting the default way
-      event.preventDefault();
-
-      var values = $(this).serialize();
-
-      var posting = $.post('/products', values);
-
-      posting.done(function(data) {
-        var post = data;
-        $("#productName").text(post["name"]);
-        $("#productPrice").text(post["price"]);
-      });
+$(function () {
+  $('form').submit(function(event) {
+    event.preventDefault();
+    var values = $(this).serialize();
+    var posting = $.post('/products', values);
+    posting.done(function(data) {
+      var product = data;
+      $("#productName").text(product["name"]);
+      $("#productPrice").text("$" + product["price"]);
+      $("#productDescription").text(product["description"]);
     });
   });
+});
 </script>
